RESOLVED FIXED104901
[GTK] Don't leak GStaticRecMutex
https://bugs.webkit.org/show_bug.cgi?id=104901
Summary [GTK] Don't leak GStaticRecMutex
Alberto Garcia
Reported 2012-12-13 04:05:05 PST
There's a GStaticRecMutex allocated in webkit_web_audio_src_init(), but it's never freed.
Attachments
Patch (2.56 KB, patch)
2012-12-13 04:29 PST, Alberto Garcia
no flags
Alberto Garcia
Comment 1 2012-12-13 04:29:06 PST
Martin Robinson
Comment 2 2012-12-13 04:31:31 PST
Comment on attachment 179249 [details] Patch Nice catch.
WebKit Review Bot
Comment 3 2012-12-13 05:12:47 PST
Comment on attachment 179249 [details] Patch Attachment 179249 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/15314239 New failing tests: inspector-protocol/debugger-terminate-dedicated-worker-while-paused.html
WebKit Review Bot
Comment 4 2012-12-13 06:03:14 PST
Comment on attachment 179249 [details] Patch Clearing flags on attachment: 179249 Committed r137587: <http://trac.webkit.org/changeset/137587>
WebKit Review Bot
Comment 5 2012-12-13 06:03:18 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.